# muxterm

./: CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md
assets/: muxterm.icns
assets/fonts/: LICENSE.txt
crates/egui_term/: Cargo.toml  VENDOR.md
crates/egui_term/src/: bindings.rs  font.rs  lib.rs  theme.rs  view.rs
crates/egui_term/src/backend/: mod.rs
packaging/: Info.plist  icon.swift  make-signing-cert.sh
src/: agent.rs  agent_hooks.rs  ai_prompt.rs  app.rs  ask.rs  attention.rs  bg_jobs.rs  config.rs  git_status.rs  keys.rs  layout.rs  lib.rs  links.rs  main.rs  mesh.rs  pane.rs  pr_status.rs  scrollback.rs  search.rs  settings.rs  sidebar.rs  state.rs  tabbar.rs  theme.rs  tmux.rs  workspace.rs  workspace_popup.rs
