[package]
name = "muxterm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/egui_term"]

[dependencies]
egui = "0.31"
eframe = { version = "0.31", features = ["persistence"] }
egui_term = { path = "crates/egui_term" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
