[package]
name = "egui_term"
description = "Terminal emulator widget powered by EGUI framework and alacritty terminal backend."
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Harzu/egui_term"
categories = ["gui"]
license = "MIT"

[dependencies]
egui = "0.31.0"
alacritty_terminal = "0.25.0"
anyhow = "1.0.96"
open = "5.3.2"
# muxterm patch P19: link detection reconstructs logical lines as strings and
# matches with the `regex` crate (alacritty's grid search is WRAPLINE-gated and
# tmux repaints soft-wraps as discrete rows). Already in the lock tree.
regex = "1"
